2000-09-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm-cats/index.html:
	updated pictures of kassandra and geoffrey

2000-09-07  Dan Espen  <dane@mk.telcordia.com>

	* generated/FAQ.html,generated/NEWS.html: regenerated.

2000-09-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.21

2000-07-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.20

2000-06-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.19

2000-05-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.18

2000-05-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.17

2000-04-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.16

2000-04-02  Mikhael Goikhman  <migo@homemail.com>

	* links.html: added a link to the fvwm-themes project.

2000-04-01  Dan Espen  <dane@mk.telcordia.com>

	* links.html: Remove dead and out of date links:
	Tkgoodstuff, fvwm95, Scott Boyd, Barry Warsaw, fvwm2gnome.

2000-03-31  olicha <olivier.chapuis@free.fr>

	* index.html:
	* icons.html:
	* sounds/*:
	Added some sounds distribution

2000-03-29  Hippo

	* mod_f2m_communication.html: Brought up to date with CVS fvwm.

2000-03-06  Dan Espen  <dane@mk.telcordia.com>

	* vector-buttons/testbed.fvwmrc: Remove typo and some commented out
 	stuff.

	* vector-buttons/DecorDemo3.fvwmrc, DecorDemo3.gif: Fix to minimize
 	button from Fabian Beutin.

2000-02-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.15

2000-02-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.14

2000-02-05  Dan Espen  <dane@mk.telcordia.com>

	* vector-buttons/vector-buttons.html: Added instructions on how to
	submit a vector button and a link to Jos van Riswick's Perl script.
