@@ -29,7 +29,12 @@ Latest CVS sources via ftp: <a href="ftp://ftp.fvwm.org/pub/fvwm/devel/sources/"
 
 <li>
 Direct CVS access: see below</li>
+
+<li>
+Experimental <a href="ftp://fvwm-themes.sourceforge.net/pub/fvwm-themes/rpm/">rpm packages</a> for testing
 </ul>
+
+
 Obsolete packages:
 <ul>
 <li>
