@@ -15,14 +15,23 @@ Note, the changes for the last STABLE release start with release
 
 Changes in beta release 2.3.22 (not released yet)
 
-* Sped up command execution and startup.
+* Pressing mouse button 2 in an FvwmIdent window restart FvwmIdent
+  and asks for a new window.
+
+* New window styles GNOMEIgnoreHints and GNOMEUseHints to disable
+  GNOME hints for specific windows even if GNOME compliance is
+  compiled in.
+
+* DestroyModuleConfig supports a non-conflicting syntax.
+
+* Speed up command execution and startup.
 
 * Improved handling of windows that set the "input focus" hint to "false".
 
 Changes in beta release 2.3.21 (September 2000)
 
-* Module configuration syntax now accepts a delimeter, colon and optional
-  spaces; the old syntax is supported as usual:
+* Module configuration syntax now accepts a delimeter - colon and optional
+  spaces; the old syntax is supported as usual (but it allows conflicts):
     *FvwmIconBoxMaxIconSize 48x48
     *FvwmIconBox: MaxIconSize 48x48
 
@@ -169,9 +178,9 @@ Changes in beta release 2.3.11 (December 1999)
 
 * New option NoHotkeys to WindowList command.
 
-* The CursorStyle command has been improved.  It is now possible to restore
-  the default cursors.  Xpm images without a hot spot can be used as
-  cursors.
+* The CursorStyle command has been improved.  It is now possible
+  to restore the default cursors.  Xpm images without a hot spot
+  can be used as cursors.
 
 * New styles BackingStore/BackingStoreOff and SaveUnder/SaveUnderOff.
 
@@ -1570,7 +1579,7 @@ pl1 to pl2
 </pre>
     <hr>
 <!-- This file automatically generated by txt2html.sh
-     on Thu Sep  7 09:06:23 EDT 2000 -->
+     on Tue Oct 10 04:07:16 IDT 2000 -->
   </body>
 </html>
 
